k8s/service-daemon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-daemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-daemon
  template:
    metadata:
      labels:
        app: service-daemon
    spec:
      containers:
      - name: service-daemon
        image: alfr3d/service-daemon:latest
