k8s/service-device-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-device
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-device
  template:
    metadata:
      labels:
        app: service-device
    spec:
      containers:
      - name: service-device
        image: alfr3d/service-device:latest
        imagePullPolicy: Never
