k8s/service-environment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-environment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-environment
  template:
    metadata:
      labels:
        app: service-environment
    spec:
       containers:
       - name: service-environment
         image: alfr3d/service-environment:latest
         imagePullPolicy: Never
