k8s/service-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-frontend
  template:
    metadata:
      labels:
        app: service-frontend
    spec:
      containers:
      - name: service-frontend
        image: alfr3d/service-frontend:latest
        ports:
        - containerPort: 8000
