k8s/service-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-user
  template:
    metadata:
      labels:
        app: service-user
    spec:
      containers:
      - name: service-user
        image: alfr3d/service_user:latest
